[gd_scene load_steps=2 format=3 uid="uid://btvlh7q5yrj3w"]

[ext_resource type="Script" path="res://scripts/hex_tile.gd" id="1_hex_tile"]

[node name="HexTile" type="Node2D"]
script = ExtResource("1_hex_tile")

[node name="TerrainSprite" type="Sprite2D" parent="."]
centered = true
offset = Vector2(0, 0)

[node name="Polygon2D" type="Polygon2D" parent="."]

[node name="OutlineLine" type="Line2D" parent="."]
visible = false
width = 3.0
default_color = Color(1, 0.8, 0, 1)
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2
antialiased = true

[node name="ObjectSprite" type="Sprite2D" parent="."]
centered = true
offset = Vector2(0, 0)
z_index = 2

[node name="BuildingSprite" type="Sprite2D" parent="."]
centered = true
offset = Vector2(0, 0)
z_index = 3

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
